--- a/templates/searchresults.html
+++ b/templates/searchresults.html
@@ -98,7 +98,7 @@
                                             <div class="card-body contact-body">
                                                 <div class="row">
                                                     <div class="col-md-6">
-                                                        <p><i class="bi bi-person-circle me-2"></i> {{ contact.name }} | {{ contact.designation|default:'' }}</p>
+                                                        <p><i class="bi bi-person-circle me-2"></i> {{ contact.name }} | {{ contact.designation|default('') }}</p>
                                                         <p><i class="bi bi-envelope me-2"></i> {{ contact.email }}</p>
                                                         <p><i class="bi bi-telephone me-2"></i> {{ contact.phone }}</p>
 
